--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Courier New", Courier, monospace;
+}
+
 #gameBoard {
   display: grid;
   grid-template-columns: 100px 100px 100px;
@@ -7,11 +11,13 @@
 }
 
 #gameBoard span {
-  font-size: 50px;
+  display: flex;
+  font-size: 70px;
   width: 100px;
   height: 100px;
   background-color: lightgray;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
 }
 
